# JaMMaTo

./: .gitignore  MANIFEST  MetadataReader.py  MetadataSchemaReader.py  README.md  codecov.yml  dicomMapping.py  dicomMapping_script.py  dicomReader.py  dicomSeriesMap.py  dicomStudyMap.py  dicom_mapping_script.py  fillSchema.py  git_commands.txt  gittoken.txt  mapSchema.py  mapped_metadata.json  metadataReader.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: documentation.yml  pre-commit.yml  publish.yml  test.yml
NEP-Metadata-Mapping-Tool/: __init__.py  dicomMapping.py  metadataSchemaReader.py
NEPMetadataMapping/: __init__.py  attributeMapping.py  attribute_mapping.py  cache_schemas.py  dicomMapping.py  dicomReader.py  dicomSeriesMap.py  dicom_mapping.py  dicom_reader.py  excelIngest.py  mapMRISchema.py  mapSchema.py  map_mri_schema.py  map_schema.py  metadataReader.py  metadataSchemaReader.py  metadata_reader.py  performance.py  schema_reader.py  schemasCollector.py  schemas_collector.py  test.py
NEPMetadataMappingTool/: __init__.py  dicomReader.py  metadataSchemaReader.py
benchmarks/: test_performance.py
config/: config_data_cleaning.json
configs/: config_dicom_file_validation.json
example/: README.md  __main__.py  dicomMapping_script.py  dicom_mapping_script.py  map.json  mapped_metadata.json  mappingToolmapTest.xlsx  test_sem_map.json
example/files/: MRIm1.dcm
example/metadata_maps/: map_full_path.json  map_mixed_path.json  map_relative_path.json  map_study_only.json
jammato/: __init__.py  analyse_study.py  attribute_inserter.py  attribute_mapper.py  cache_schemas.py  data_cleaning.py  dicom_mapping.py  dicom_reader.py  mapping_flat.py  metadata_reader.py  performance.py  schema_reader.py  schemas_collector.py  testthread.py
jammato/configs/: config_data_cleaning.json  config_dicom_file_validation.json
schemas/: mriJsonSchema.json  mriJsonSchemav2.json  mriSchmemaV2_1.json
tests/: conftest.py  test_attributeMapping.py  test_attribute_mapping.py  test_dicomReader.py  test_dicom_reader.py  test_mapMRIschema.py  test_mapSchema.py  test_map_mri_schema.py  test_map_schema.py  test_metadataSchemaReader.py  test_metadata_reader.py  test_metadata_schema_reader.py  test_schemaCollector.py  test_schema_collector.py  test_schemasCollector.py
